<resources>
    <string name="app_name">taskmaster</string>
    <string name="addTask">Add Task</string>
    <string name="taskTitle">Task Title</string>
    <string name="taskDescription">Task Description</string>
    <string name="totalTask">Total Task</string>
    <string name="allTasksButton">ALL TASKS</string>
    <string name="addTaskButton">ADD TASK</string>
    <string name="mainActivityTitle">Tasks</string>
    <string name="allTasksTitle">All Tasks</string>
    <string name="totalTasksCountTextdontuse" />
    <string name="totalTasksCountText">Total tasks:</string>
    <string name="addTaskTitle">Task Title</string>
    <string name="addTaskDescription">Task Description</string>
    <string name="addTaskBtn">Add Task Button</string>
    <string name="addTaskActivityTaskTitleHint">Task Title</string>
    <string name="addTaskActivityTaskDescriptionHint">Task Description</string>
    <string name="addTaskActivityTextViewSubmitted">Submitted</string>
    <string name="taskDetailTitle">Task Title</string>
    <string name="settings_button">Navigate To User Settings</string>
    <string name="settingsbutton">Navigate To User Settings</string>
    <string name="userSettingsActivityUsername">Username</string>
    <string name="usernameEditText">Input Field For Username</string>
    <string name="save">Save</string>
    <string name="taskOneButton">Task 1</string>
    <string name="usernameTextView">username</string>
    <string name="taskTwo">task two</string>
    <string name="taskTwoButton">Task 2</string>
    <string name="taskThreeButton">Task 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentTitle">Title</string>
    <string name="fragmentBody">Body</string>
    <string name="taskFragStatus">Status</string>
    <string name="taskDetailStatus">Status</string>
    <string name="allTaskTitle">Title</string>
    <string name="allTaskBody">Body</string>
    <string name="allTaskStatus">Status</string>
</resources>