...
    android:background="#F9FBE7"
    android:contentDescription="@string/settings_button"
    tools:context=".activities.MainActivity">


    <Button
        android:id="@+id/mainActivityAddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#6D80DEEA"
        android:fontFamily="@font/alfa_slab_one"
...
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/vollkorn_sc_semibold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainActivityRecyclerViewTasks"
        android:layout_width="377dp"
        android:layout_height="379dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
